# VectorSetSearch

./: CMakeLists.txt  README.md  vss_test.cpp
plot/: demo_plot.ipynb
src/: dataset.h  dual_hnsw_index.h  hnsw.h  index.h  paral_hnsw_index.h  prune_hnsw_index.h  runner.h  sample.h  semi_hnsw_index.h  sketch_hnsw_index.h  space.h
src/baselines/: brute_force.h  dessert.h  hnsw_pointwise.h  hnswlib_pointwise.h  ivfpq_pointwise.h  multi_hnsw.h  multi_hnsw_index.h  muvera.h  set_hnsw.h  single_hnsw.h  single_hnsw_index.h
